--- a/.config
+++ b/.config
@@ -879,6 +879,7 @@ CONFIG_USART2_SERIALDRIVER=y
 # CONFIG_OTHER_UART_SERIALDRIVER is not set
 CONFIG_MCU_SERIAL=y
 CONFIG_STANDARD_SERIAL=y
+CONFIG_SERIAL_NPOLLWAITERS=2
 # CONFIG_SERIAL_IFLOWCONTROL is not set
 # CONFIG_SERIAL_OFLOWCONTROL is not set
 # CONFIG_SERIAL_DMA is not set
@@ -891,8 +892,8 @@ CONFIG_NO_SERIAL_CONSOLE=y
 #
 # USART2 Configuration
 #
-CONFIG_USART2_RXBUFSIZE=256
-CONFIG_USART2_TXBUFSIZE=256
+CONFIG_USART2_RXBUFSIZE=512
+CONFIG_USART2_TXBUFSIZE=512
 CONFIG_USART2_BAUD=115200
 CONFIG_USART2_BITS=8
 CONFIG_USART2_PARITY=0
@@ -1421,6 +1422,7 @@ CONFIG_MICRORTPS_VERBOSE_OUTPUT=y
 #
 # Network Utilities
 #
+# CONFIG_NETUTILS_CHAT is not set
 # CONFIG_NETUTILS_CODECS is not set
 # CONFIG_NETUTILS_DHCPD is not set
 # CONFIG_NETUTILS_DISCOVER is not set
