enabled math and floating point

--- a/.config
+++ b/.config
@@ -1191,7 +1191,7 @@ CONFIG_STDIO_BUFFER_SIZE=64
 CONFIG_STDIO_LINEBUFFER=y
 CONFIG_NUNGET_CHARS=2
 # CONFIG_NOPRINTF_FIELDWIDTH is not set
-# CONFIG_LIBC_FLOATINGPOINT is not set
+CONFIG_LIBC_FLOATINGPOINT=y
 CONFIG_LIBC_LONG_LONG=y
 # CONFIG_LIBC_SCANSET is not set
 # CONFIG_EOL_IS_CR is not set
@@ -1199,7 +1199,7 @@ CONFIG_LIBC_LONG_LONG=y
 # CONFIG_EOL_IS_BOTH_CRLF is not set
 CONFIG_EOL_IS_EITHER_CRLF=y
 # CONFIG_MEMCPY_VIK is not set
-# CONFIG_LIBM is not set
+CONFIG_LIBM=y
 
 #
 # Architecture-Specific Support
@@ -1332,8 +1332,9 @@ CONFIG_BUILTIN_PROXY_STACKSIZE=1024
 # CONFIG_EXAMPLES_IGMP is not set
 # CONFIG_EXAMPLES_INA219 is not set
 # CONFIG_EXAMPLES_JSON is not set
+CONFIG_LINOROBOT2_CLIENT=y
 # CONFIG_EXAMPLES_MEDIA is not set
-CONFIG_EXAMPLES_CLIENT=y
+# CONFIG_EXAMPLES_CLIENT is not set
 # CONFIG_EXAMPLES_MM is not set
 # CONFIG_EXAMPLES_MODBUS is not set
 # CONFIG_EXAMPLES_MOUNT is not set
